add create and details views and routes
Co-authored-by: Aaron Mejia <aaron@mejia.dev>

--- a/AnimalShelter/Views/Animals/Index.cshtml
+++ b/AnimalShelter/Views/Animals/Index.cshtml
@@ -12,7 +12,7 @@
 @foreach (Animal animal in Model)
 {
   <div>
-    <h4>@Html.ActionLink($"{animal.AnimalName}", "Details")</h4>
+    <h4>@Html.ActionLink($"{animal.AnimalName}", "Details", new { id = animal.AnimalId})</h4>
   </div>
 }
 
