add edit view and route
Co-authored-by: Aaron Mejia <aaron@mejia.dev>

--- a/AnimalShelter/Views/Animals/Details.cshtml
+++ b/AnimalShelter/Views/Animals/Details.cshtml
@@ -11,4 +11,5 @@
 <p>Animal Breed: @Model.AnimalBreed</p>
 <p>Admittance Date: @Model.AdmittanceDate</p>
 
+<p>@Html.ActionLink("Edit animal", "Edit", new { id = Model.AnimalId})</p>
 <p>@Html.ActionLink("Back to list", "Index")</p>
