add delete view and route
Co-authored-by: Aaron Mejia <aaron@mejia.dev>

--- a/AnimalShelter/Views/Animals/Details.cshtml
+++ b/AnimalShelter/Views/Animals/Details.cshtml
@@ -12,4 +12,5 @@
 <p>Admittance Date: @Model.AdmittanceDate</p>
 
 <p>@Html.ActionLink("Edit animal", "Edit", new { id = Model.AnimalId})</p>
+<p>@Html.ActionLink("Delete animal", "Delete", new { id = Model.AnimalId})</p>
 <p>@Html.ActionLink("Back to list", "Index")</p>
