debug error where date admittance would reset after editing animal
Co-authored-by: Aaron Mejia <aaron@mejia.dev>

--- a/AnimalShelter/Views/Animals/Edit.cshtml
+++ b/AnimalShelter/Views/Animals/Edit.cshtml
@@ -9,6 +9,7 @@
 @using (Html.BeginForm())
 {
   @Html.HiddenFor(model => model.AnimalId)
+  @Html.HiddenFor(model => model.AdmittanceDate)
 
   @Html.LabelFor(model => model.AnimalName )
   @Html.TextBoxFor(model => model.AnimalName)
