add edit view and route to clients
Co-authored-by: Aaron Mejia <aaron@mejia.dev>

--- a/AnimalShelter/Views/Clients/Details.cshtml
+++ b/AnimalShelter/Views/Clients/Details.cshtml
@@ -8,6 +8,7 @@
 <hr />
 
 <p>No animals yet</p>
+<p>@Html.ActionLink("Edit this client", "Edit", new { id = @Model.ClientId})</p>
 
 
 <p>@Html.ActionLink("Back to Client list", "Index")</p>
