add delete view and route to client
Co-authored-by: Aaron Mejia <aaron@mejia.dev>

--- a/AnimalShelter/Views/Clients/Details.cshtml
+++ b/AnimalShelter/Views/Clients/Details.cshtml
@@ -9,6 +9,6 @@
 
 <p>No animals yet</p>
 <p>@Html.ActionLink("Edit this client", "Edit", new { id = @Model.ClientId})</p>
-
+<p>@Html.ActionLink("Delete client", "Delete", new { id = Model.ClientId})</p>
 
 <p>@Html.ActionLink("Back to Client list", "Index")</p>
