--- a/AnimalShelter/Views/Clients/Edit.cshtml
+++ b/AnimalShelter/Views/Clients/Edit.cshtml
@@ -4,7 +4,7 @@
 
 @model AnimalShelter.Models.Client
 
-<h3> Edit Client - @Model.ClientName</h3>
+<h3> Edit Caretaker - @Model.ClientName</h3>
 
 @using (Html.BeginForm())
 {
@@ -16,4 +16,4 @@
   <input type="submit" value="Save" />
 }
 
-<p>@Html.ActionLink("Back to client list", "Index")</p>
+<p>@Html.ActionLink("Back to caretaker list", "Index")</p>
