--- a/AnimalShelter/Views/Clients/Delete.cshtml
+++ b/AnimalShelter/Views/Clients/Delete.cshtml
@@ -4,7 +4,7 @@
 
 @model AnimalShelter.Models.Client
 
-<p>Are you sure you want to delete this client?</p>
+<p>Are you sure you want to delete this caretaker?</p>
 
 @Html.DisplayNameFor(model => model.ClientName): @Html.DisplayFor(model => model.ClientName)
 @using (Html.BeginForm())
@@ -12,4 +12,4 @@
   <input type="submit" value="Delete" />
 }
 
-@Html.ActionLink("Return to client list", "Index")
+@Html.ActionLink("Return to caretaker list", "Index")
