--- a/AnimalShelter/Views/Clients/Index.cshtml
+++ b/AnimalShelter/Views/Clients/Index.cshtml
@@ -6,7 +6,7 @@
 
 @if (@Model.Count == 0)
 {
-  <p>Please add a client</p>
+  <p>Please add a caretaker</p>
 }
 
 @foreach (Client client in Model)
@@ -16,5 +16,5 @@
   </div>
 }
 
-<p>@Html.ActionLink("Add new client", "Create")</p>
+<p>@Html.ActionLink("Add new caretaker", "Create")</p>
 <p>@Html.ActionLink("Return Home", "Index", "Home")</p>
