--- a/AnimalShelter/Views/Home/Index.cshtml
+++ b/AnimalShelter/Views/Home/Index.cshtml
@@ -4,4 +4,4 @@
 
 <h1>Animal Shelter</h1>
 <p>@Html.ActionLink("See all animals", "Index", "Animals")</p>
-<p>@Html.ActionLink("See all clients", "Index", "Clients")</p>
+<p>@Html.ActionLink("See all caretakers", "Index", "Clients")</p>
