--- a/AnimalShelter/Views/Animals/Details.cshtml
+++ b/AnimalShelter/Views/Animals/Details.cshtml
@@ -10,6 +10,7 @@
 <p>Type of Animal : @Model.Type</p>
 <p>Animal Breed: @Model.AnimalBreed</p>
 <p>Admittance Date: @Model.AdmittanceDate</p>
+<p>@Html.DisplayNameFor(model => model.Client): @Html.DisplayFor(model => model.Client.ClientName)</p>
 
 <p>@Html.ActionLink("Edit animal", "Edit", new { id = Model.AnimalId})</p>
 <p>@Html.ActionLink("Delete animal", "Delete", new { id = Model.AnimalId})</p>
