--- a/AnimalShelter/Views/Clients/Edit.cshtml
+++ b/AnimalShelter/Views/Clients/Edit.cshtml
@@ -16,4 +16,6 @@
   <input type="submit" value="Save" />
 }
 
+<div class="navigation">
 <p>@Html.ActionLink("Back to caretaker list", "Index")</p>
+</div>
