--- a/AnimalShelter/Views/Shared/Header.cshtml
+++ b/AnimalShelter/Views/Shared/Header.cshtml
@@ -1,5 +1,6 @@
 <div id="header">
-  <h2>Hello!</h2>
+<br>
+  <h2>🐶 Aaron and Brianca's Animal Shelter 🐲</h2>
   @using (Html.BeginForm("Index", "Animals", FormMethod.Get))
   {
     <input type="text" name="query" />
