--- a/AnimalShelter/Views/Animals/Edit.cshtml
+++ b/AnimalShelter/Views/Animals/Edit.cshtml
@@ -25,4 +25,6 @@
   <input type="submit" value="Save" />
 }
 
+<div class="navigation">
 <p>@Html.ActionLink("Back to animal list", "Index")</p>
+</div>
