--- a/AnimalShelter/Views/Animals/Index.cshtml
+++ b/AnimalShelter/Views/Animals/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 @using AnimalShelter.Models;
+<h3>Animals currently at the Shelter:</h3>
 
 @if (@Model.Count == 0)
 {
@@ -16,5 +17,7 @@
   </div>
 }
 
-<p>@Html.ActionLink("Add new animal", "Create")</p>
-<p>@Html.ActionLink("Return Home", "Index", "Home")</p>
+<div class="navigation">
+<div>@Html.ActionLink("Add new animal", "Create")</div>
+<div>@Html.ActionLink("Return Home", "Index", "Home")</div>
+</div>
