--- a/AnimalShelter/Views/Clients/Create.cshtml
+++ b/AnimalShelter/Views/Clients/Create.cshtml
@@ -13,4 +13,6 @@
   <input type="submit" value="Add a new caretaker" />
 }
 
+<div class="navigation">
 <p>@Html.ActionLink("Show all caretakers", "Index")</p>
+</div>
