--- a/AnimalShelter/Views/Clients/Delete.cshtml
+++ b/AnimalShelter/Views/Clients/Delete.cshtml
@@ -4,12 +4,14 @@
 
 @model AnimalShelter.Models.Client
 
+<h3>Delete Caretaker - @Model.ClientName</h3>
 <p>Are you sure you want to delete this caretaker?</p>
 
-@Html.DisplayNameFor(model => model.ClientName): @Html.DisplayFor(model => model.ClientName)
 @using (Html.BeginForm())
 {
   <input type="submit" value="Delete" />
 }
 
+<div class="navigation">
 @Html.ActionLink("Return to caretaker list", "Index")
+</div>
