--- a/AnimalShelter/Views/Home/Index.cshtml
+++ b/AnimalShelter/Views/Home/Index.cshtml
@@ -1,7 +1,13 @@
 @{
   Layout = "_Layout";
 }
-
-<h1>Animal Shelter</h1>
-<p>@Html.ActionLink("See all animals", "Index", "Animals")</p>
-<p>@Html.ActionLink("See all caretakers", "Index", "Clients")</p>
+<br>
+<br>
+<h1>Welcome to Our Animal Shelter</h1>
+<h3>Where would you like to navigate to?</h3>
+<br>
+<br>
+<div class="homeNavigation">
+<div>@Html.ActionLink("See all animals", "Index", "Animals") </div>
+<div>@Html.ActionLink("See all caretakers", "Index", "Clients")</div>
+</div>
